--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.thymeleaf.check-template-location=true
 #oracle
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/xe
-spring.datasource.username=webserver
+spring.datasource.username=testuser
 spring.datasource.password=1234
 
 #mybatis
