properties에서 mybatis alias 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.password=1234
 #mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/**.xml
-mybatis.type-aliases-package=kr.or.iei
+mybatis.type-aliases-package=com.webtoon
 mybatis.configuration.jdbc-type-for-null=NULL
 
 #file upload
