--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,22 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.10.1</version>
 		</dependency>
+		
+		<!-- AOP -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-aop</artifactId>
+		    <version>3.2.0</version>
+		</dependency>
+	
+		<!-- Spring Security -> Spring-Security-Web, Spring-Security-Config 의존성도 함께 주입됨-->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		    <version>3.2.5</version>
+		</dependency>
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
